tests/NormalTests/paczka1/small_fuzzy/85957327.err
Error in line 1: 0TuO2t S926 77,4
Error in line 3: sX9B7B0kM S926 2,7
Error in line 4: 0TuO2t S431 72,9
Error in line 5: 96hx A580 6,1
